# VolumeBuilders

./: .CMakeLists.txt.kate-swp  .gitignore  .gitlab-ci.yml  CMakeLists.txt  HowToBuild.md  MakeDocs.sh  MakeDocsREADME.md  README.md  ViewVolumeBuilderDocs.sh  vb_user_setup_general.sh
.github/workflows/: static.yml
.run/: Demo.run.xml  Template CMake Application.run.xml  VolumeBuilder.run.xml
cmake/DSL/cern/: Geant4_Target.cmake  ROOT_Target.cmake
cmake/DSL/utils/: Setup_Paths.cmake  dsl_package_export.cmake  siphon_user_env.cmake
demo/: CMakeLists.txt  build-autoincludes
demo/cmake/DSL/cern/: Geant4_Target.cmake  ROOT_Target.cmake
demo/cmake/DSL/utils/: siphon_user_env.cmake
demo/debug/: input.txt  vis.mac
demo/include/: DetectorConstruction.hh  DetectorConstruction_includes.hh  DetectorMessenger.hh  TheSimulation.hh  autoincludes.inc  preproc  raw
demo/src/: DetectorConstruction.cc  DetectorMessenger.cc  GeosTest.cc  Materials.cc  Materials.inc  TheSimulation.cc
demo/src/Geometries/: ConstructAssembly.cc  ConstructAssembly.inc  ConstructBoxExample.cc  ConstructBoxExample.inc  ConstructExample1.cc  ConstructExample1.inc  ConstructHexPart.cc  ConstructHexPart.inc  ConstructWorld.cc  ConstructWorld.inc
docs/: Doxyfile
docs/dots/: builder_graph.dot
include/: Assembly.hh  AssemblyCore.hh  BoxBuilder.hh  BoxBuilderCore.hh  BuilderFactories.hh  BuilderViewCore.hh  FromG4VSolid.hh  FromG4VSolidCore.hh  ISolidBuilder.hh  IVolumeBuilder.hh  Linkable.hh  PlacementNameRegistry.hh  RZBuilder.hh  RZBuilderCore.hh  StructureBuilder.hh  StructureBuilder.hpp  StructureBuilderBase.hh  StructureBuilderBase.hpp  StructureBuilderCore.hh  StructureBuilderReference.hh  StructureViewCore.hh  VolumeBuilder.hh  VolumeBuilder.hpp  VolumeBuilderBase.hh  VolumeBuilderBase.hpp  VolumeBuilderConfigs.hh  VolumeBuilderCore.hh  VolumeBuilderIncludes.hh  VolumeBuilderReference.hh  VolumeBuilderTypes.hh  VolumeBuilders.hh  VolumeBuildersTypes.hh  disableable_shared_from_this.hh  i_shared_ptr.hh
public/: AssemblyCore_8cc.html  AssemblyCore_8cc__incl.map  AssemblyCore_8cc__incl.md5  AssemblyCore_8cc_source.html  AssemblyCore_8hh.html  AssemblyCore_8hh__dep__incl.map  AssemblyCore_8hh__dep__incl.md5  AssemblyCore_8hh__incl.map  AssemblyCore_8hh__incl.md5  AssemblyCore_8hh_source.html  BoxBuilderCore_8cc.html  BoxBuilderCore_8cc__incl.map  BoxBuilderCore_8cc__incl.md5  BoxBuilderCore_8cc_source.html  BoxBuilderCore_8hh.html  BoxBuilderCore_8hh__dep__incl.map  BoxBuilderCore_8hh__dep__incl.md5  BoxBuilderCore_8hh__incl.map  BoxBuilderCore_8hh__incl.md5  BoxBuilderCore_8hh_source.html  BuilderFactories_8hh.html  BuilderFactories_8hh__dep__incl.map  BuilderFactories_8hh__dep__incl.md5  BuilderFactories_8hh__incl.map  BuilderFactories_8hh__incl.md5  BuilderFactories_8hh_source.html  ConstructAssembly_8cc.html  ConstructAssembly_8cc__incl.map  ConstructAssembly_8cc__incl.md5  ConstructAssembly_8cc_source.html  ConstructAssembly_8inc.html  ConstructAssembly_8inc_source.html  ConstructBoxExample_8cc.html  ConstructBoxExample_8cc__incl.map  ConstructBoxExample_8cc__incl.md5  ConstructBoxExample_8cc_source.html  ConstructBoxExample_8inc.html  ConstructBoxExample_8inc_source.html  ConstructExample1_8cc.html  ConstructExample1_8cc__incl.map  (+338 more)
public/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  (+82 more)
runConfigurations/: VBDemo.xml  VolumeBuilders.xml
src/: Assembly.cc  AssemblyCore.cc  BoxBuilder.cc  BoxBuilderCore.cc  BuilderViewCore.cc  FromG4VSolid.cc  FromG4VSolidCore.cc  PlacementNameRegistry.cc  RZBuilder.cc  RZBuilderCore.cc  StructureBuilderCore.cc  StructureBuilderReference.cc  StructureViewCore.cc  VolumeBuilder.cc  VolumeBuilderBase.cc  VolumeBuilderCore.cc  VolumeBuilderReference.cc
